--- a/resume.css
+++ b/resume.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: rgba(251, 229, 229, 0.684);
+    background: rgba(182, 222, 255, 0.684);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,12 +25,12 @@ body {
     margin: 50px;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    box-shadow: 0 35px 55px rgba(211, 68, 68, 0.1);
+    box-shadow: 0 35px 55px skyblue;
 }
 
 .container .left_Side {
     position: relative;
-    background: #800b0d;
+    background: lightsteelblue;
     padding: 40px;
 }
 
@@ -62,7 +62,7 @@ body {
 }
 
 .profileText h2 {
-    color: #fff;
+    color: black;
     font-size: 1.5em;
     margin-top: 20px;
     text-transform: uppercase;
@@ -81,7 +81,7 @@ body {
 }
 
 .title {
-    color: #fff;
+    color: black;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 1px;
@@ -100,15 +100,8 @@ body {
     cursor: pointer;
 }
 
-.contactInfo ul li .icon {
-    display: inline-block;
-    width: 30px;
-    font-size: 18px;
-    color: #e37b7d;
-}
-
 .contactInfo ul li span {
-    color: #fff;
+    color: black;
     font-weight: 300;
 }
 
@@ -118,17 +111,17 @@ body {
 }
 
 .contactInfo.education h5 {
-    color: rgb(241, 141, 141);
+    color: purple;
     font-weight: 500;
 }
 
 .contactInfo.education h4 {
-    color: rgb(252, 248, 248);
+    color: black;
     font-weight: 500;
 }
 
 .contactInfo.education h4:nth-child(2) {
-    color: #fff;
+    color: black;
     font-weight: 300;
 }
 
@@ -136,7 +129,7 @@ body {
     position: relative;
     width: 100%;
     height: 6px;
-    background: #f18384;
+    background: blue;
     display: block;
     margin-top: 5px;
 }
@@ -146,7 +139,7 @@ body {
     top: 0;
     left: 0;
     height: 100%;
-    background: #620305;
+    background:skyblue;
 }
 
 .container .right_Side {
@@ -181,22 +174,6 @@ p {
     margin: 20px 0;
 }
 
-.about .box .year_company {
-    min-width: 150px;
-}
-
-.about .box .year_company h5 {
-    text-transform: uppercase;
-    color: #848c90;
-    font-weight: 600;
-}
-
-.about .box .text h4 {
-    text-transform: uppercase;
-    color: rgb(148, 8, 8);
-    font-size: 16px;
-}
-
 .skills .box {
     position: relative;
     width: 100%;
@@ -225,7 +202,7 @@ p {
     top: 0;
     left: 00;
     height: 100%;
-    background: rgb(148, 8, 8);
+    background: blue;
 }
 
 .interest ul {
@@ -239,9 +216,9 @@ p {
     font-weight: 500;
     margin: 10px 0;
 }
-
-.interest ul li .fa {
-    color: #800b0d;
-    font-size: 18px;
-    width: 20px;
+.achieve h2{
+    color: #003147;
+}
+.achieve ul{
+    color: #333;
 }
